--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,139 @@
-* {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
-  outline: 0;
-  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 html {
-  font-size: 10px;
+  font-size: 62.5%;
 }
 
 body {
-  line-height: 1.2;
   font-size: 1.6rem;
   color: #2C2C2C;
+  line-height: 1.2;
   font-family: Inter, sans-serif;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 a {
@@ -27,7 +146,7 @@ img {
   height: auto;
 }
 
-ul, ol {
+ul li {
   list-style: none;
 }
 
@@ -39,11 +158,18 @@ ul, ol {
 }
 
 .header {
-  background: #fff;
+  background: orange;
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  height: 130px;
 }
 .header .container {
   max-width: 1440px;
+}
+.header .container .header-logo {
+  height: fit-content;
+}
+.header .container .header-menu {
+  margin-top: 65px;
 }
 .header .container .header-menu ul {
   display: flex;
