--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,10 @@
 // Import Layouts
 @import './layouts/header';
 @import './layouts/footer';
+@import './layouts/hero';
+@import './layouts/quality';
+@import './layouts/product';
 
 // Import Components
 @import './components/button';
+@import './components/circlebg';
