--- a/scss/parts/_variable.scss
+++ b/scss/parts/_variable.scss
@@ -1,46 +1,73 @@
 $fontFamily: Inter, sans-serif;
 
-
 $whiteColor: #fff;
-$textColor: #2C2C2C;
+$textColor: #2c2c2c;
 $linkColor: #2c2c2c;
 $bgColor: #2c2c2c;
 
-$greenMain: #46B20F;
-$orangeMain: #E05000;
-$greyMain: #A3A3A3;
+$greenMain: #46b20f;
+$orangeMain: #e05000;
+$greyMain: #a3a3a3;
 // green color
-$green-100: #F2FFEC;
-$green-200: #DCFFCA;
-$green-300: #C5FFA8;
-$green-400: #AEFF86;
-$green-500: #98FF64;
-$green-600: #81FF41;
-$green-700: #63DB25;
-$green-800: #46B20F;
-$green-900: #2E8900;
+$green-100: #f2ffec;
+$green-200: #dcffca;
+$green-300: #c5ffa8;
+$green-400: #aeff86;
+$green-500: #98ff64;
+$green-600: #81ff41;
+$green-700: #63db25;
+$green-800: #46b20f;
+$green-900: #2e8900;
 $green-1000: #216000;
 
 // orange color
-$orange-100: #FFF0E7;
-$orange-200: #FFD5BD;
-$orange-300: #FFBA94;
-$orange-400: #FF9F6A;
-$orange-500: #FF8440;
-$orange-600: #FF6916;
-$orange-700: #E05000;
-$orange-800: #B74200;
-$orange-900: #8E3300;
+$orange-100: #fff0e7;
+$orange-200: #ffd5bd;
+$orange-300: #ffba94;
+$orange-400: #ff9f6a;
+$orange-500: #ff8440;
+$orange-600: #ff6916;
+$orange-700: #e05000;
+$orange-800: #b74200;
+$orange-900: #8e3300;
 $orange-1000: #662400;
 
 // grey color
-$grey-100: #F4F4F4;
-$grey-200: #E0E0E0;
-$grey-300: #CBCBCB;
-$grey-400: #B7B7B7;
-$grey-500: #A3A3A3;
-$grey-600: #8E8E8E;
-$grey-700: #7A7A7A;
+$grey-100: #f4f4f4;
+$grey-200: #e0e0e0;
+$grey-300: #cbcbcb;
+$grey-400: #b7b7b7;
+$grey-500: #a3a3a3;
+$grey-600: #8e8e8e;
+$grey-700: #7a7a7a;
 $grey-800: #656565;
 $grey-900: #515151;
-$grey-1000: #3D3C3C;
+$grey-1000: #3d3c3c;
+
+// text
+h1 {
+  font-size: 4.4rem;
+  font-weight: 800;
+  line-height: 131.523%;
+  color: $textColor;
+}
+h2 {
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 131.523%;
+  color: $textColor;
+}
+h3 {
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 3.2rem;
+  color: $textColor;
+}
+p {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 153.125%;
+  color: $textColor;
+}
